# domains

./: .env.example  .gitignore  .gitmodules  DASHBOARD_DRAFT_PLAN.md  DOMAINS_INDEX.md
.claude/skills/ultrarough.com-bind-domains/: SKILL.md
.claude/skills/ultrarough.com-update/: SKILL.md
tools/: QUICKSTART.md  README.md  status
tools/cf-grafana/: docker-compose.yml  ingest.py
tools/cf-grafana/grafana/dashboards/: portfolio.json  zone-detail.json
tools/cf-grafana/grafana/provisioning/dashboards/: dashboards.yaml
tools/cf-grafana/grafana/provisioning/datasources/: cf-stats.yaml
tools/cf-stats/: .gitignore  README.md  pyproject.toml
tools/cf-stats/src/cf_stats/: api.py  cli.py  collectors.py
tools/ed-search/: .gitignore  QUICKSTART.md  README.md  pyproject.toml
tools/ed-search/profiles/: aged-com-buildable.json  combined-recent.json  dropped-finance.json  pending-delete-short.json
tools/ed-search/src/ed_search/: cli.py  client.py  parse.py  profiles.py
tools/lama-cleaner/: .gitignore  QUICKSTART.md  README.md  lama-cleaner  setup.sh
