[project]
name = "cf-stats"
version = "0.1.0"
description = "Cloudflare account/usage snapshot collector — token health, zones, workers, DNS, analytics"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
cf-stats = "cf_stats.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cf_stats"]
